# controllers/groups_add.go
@@ -6,20 +6,20 @@ import (
 	"html/template"
 )
 
-// Series_addController operations for Series_add
-type Series_addController struct {
+// Groups_addController operations for Groups_add
+type Groups_addController struct {
 	BaseController
 }
 
 // URLMapping ...
-func (c *Series_addController) URLMapping() {
+func (c *Groups_addController) URLMapping() {
 	c.Mapping("Post", c.Post)
 	c.Mapping("Get", c.Get)
 	c.Mapping("Put", c.Put)
 	c.Mapping("Delete", c.Delete)
 }
 
-type SeriesForm struct {
+type GroupsForm struct {
 	Username    string `form:"username,text"`
 	Id          int    `form:"-"`
 	Name        string `form:"name, text"`
@@ -35,12 +35,13 @@ type SeriesForm struct {
 
 // Post ...
 // @Title Create
-// @Description create Series_add
-// @Param	body		body 	models.Series_add	true		"body for Series_add content"
-// @Success 201 {object} models.Series_add
+// @Description create Groups_add
+// @Param	body		body 	models.Groups_add	true		"body for Groups_add content"
+// @Success 201 {object} models.Groups_add
 // @Failure 403 body is empty
 // @router / [post]
-func (c *Series_addController) Post() {
+func (c *Groups_addController) Post() {
+
 	flash := beego.NewFlash()
 	if !c.IsLogin {
 		flash.Error("Error you need to be logged in")
@@ -48,16 +49,15 @@ func (c *Series_addController) Post() {
 		c.Redirect("/", 302)
 		return
 	}
-	
-	u := SeriesForm{}
+	u := GroupsForm{}
 	if err := c.ParseForm(&u); err != nil {
-		flash.Error("Series invalid")
+		flash.Error("Groups invalid")
 		flash.Store(&c.Controller)
-		c.Redirect("/comics/add", 302)
+		c.Redirect("/groups/add", 302)
 		return
 	}
 
-	exists := models.SeriesNameExists(u.Name)
+	exists := models.GroupsExists(u.Name)
 	if !exists {
 
 		file, header, err := c.GetFile("cover") // where <<this>> is the controller and <<file>> the id of your form field
@@ -70,7 +70,7 @@ func (c *Series_addController) Post() {
 
 				flash.Error(err.Error())
 				flash.Store(&c.Controller)
-				c.Redirect("/comics/add", 301)
+				c.Redirect("/groups/add", 301)
 				return
 			}
 		}
@@ -78,46 +78,37 @@ func (c *Series_addController) Post() {
 
 			flash.Error(err.Error())
 			flash.Store(&c.Controller)
-			c.Redirect("/comics/add", 301)
+			c.Redirect("/groups/add", 301)
 			return
 		}
-		series := models.Series{
-			Name:        u.Name,
-			Description: u.Description,
-			TypeName:    u.TypeName,
-			CoverImage:  "disk",
-			TypeDemonym: u.TypeDemonym,
-			Status: &models.Statuses{
-				Name: u.Status,
-			},
-		}
-		_, err = models.AddSeries(&series)
+		series := models.Groups{}
+		_, err = models.AddGroups(&series)
 		if err != nil {
 			flash.Error(err.Error())
 			flash.Store(&c.Controller)
-			c.Redirect("/comics/add", 301)
+			c.Redirect("/groups/add", 301)
 			return
 		}
 		flash.Success("Successfully added series!")
 		flash.Store(&c.Controller)
-		c.Redirect("/comics/add", 301)
+		c.Redirect("/groups/add", 301)
 		return
 
 	}
 
 	flash.Error("Adding series failed")
 	flash.Store(&c.Controller)
-	c.Redirect("/comics/add", 302)
+	c.Redirect("/groups/add", 302)
 	return
 }
 
 // Get ...
 // @Title Get
-// @Description get Series_add
-// @Success 200 {object} models.Series_add
+// @Description get Groups_add
+// @Success 200 {object} models.Groups_add
 // @Failure 403
 // @router / [get]
-func (c *Series_addController) Get() {
+func (c *Groups_addController) Get() {
 	flash := beego.NewFlash()
 	if !c.IsLogin {
 		flash.Error("Error you need to be logged in")
@@ -133,23 +124,23 @@ func (c *Series_addController) Get() {
 
 // Put ...
 // @Title Put
-// @Description update the Series_add
+// @Description update the Groups_add
 // @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.Series_add	true		"body for Series_add content"
-// @Success 200 {object} models.Series_add
+// @Param	body		body 	models.Groups_add	true		"body for Groups_add content"
+// @Success 200 {object} models.Groups_add
 // @Failure 403 :id is not int
 // @router /:id [put]
-func (c *Series_addController) Put() {
+func (c *Groups_addController) Put() {
 
 }
 
 // Delete ...
 // @Title Delete
-// @Description delete the Series_add
+// @Description delete the Groups_add
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
 // @Failure 403 id is empty
 // @router /:id [delete]
-func (c *Series_addController) Delete() {
+func (c *Groups_addController) Delete() {
 
 }
