# controllers/statuses.go
@@ -1,10 +1,8 @@
 package controllers
 
 import (
-	"encoding/json"
 	"errors"
 	"github.com/NyaaPantsu/manga/models"
-	"strconv"
 	"strings"
 
 	"github.com/astaxie/beego"
@@ -17,52 +15,7 @@ type StatusesController struct {
 
 // URLMapping ...
 func (c *StatusesController) URLMapping() {
-	c.Mapping("Post", c.Post)
-	c.Mapping("GetOne", c.GetOne)
 	c.Mapping("GetAll", c.GetAll)
-	c.Mapping("Put", c.Put)
-	c.Mapping("Delete", c.Delete)
-}
-
-// Post ...
-// @Title Post
-// @Description create Statuses
-// @Param	body		body 	models.Statuses	true		"body for Statuses content"
-// @Success 201 {int} models.Statuses
-// @Failure 403 body is empty
-// @router / [post]
-func (c *StatusesController) Post() {
-	var v models.Statuses
-	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if _, err := models.AddStatuses(&v); err == nil {
-			c.Ctx.Output.SetStatus(201)
-			c.Data["json"] = v
-		} else {
-			c.Data["json"] = err.Error()
-		}
-	} else {
-		c.Data["json"] = err.Error()
-	}
-	c.ServeJSON()
-}
-
-// GetOne ...
-// @Title Get One
-// @Description get Statuses by id
-// @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.Statuses
-// @Failure 403 :id is empty
-// @router /:id [get]
-func (c *StatusesController) GetOne() {
-	idStr := c.Ctx.Input.Param(":id")
-	id, _ := strconv.Atoi(idStr)
-	v, err := models.GetStatusesById(id)
-	if err != nil {
-		c.Data["json"] = err.Error()
-	} else {
-		c.Data["json"] = v
-	}
-	c.ServeJSON()
 }
 
 // GetAll ...
@@ -124,48 +77,6 @@ func (c *StatusesController) GetAll() {
 		c.Data["json"] = err.Error()
 	} else {
 		c.Data["json"] = l
-	}
-	c.ServeJSON()
-}
-
-// Put ...
-// @Title Put
-// @Description update the Statuses
-// @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.Statuses	true		"body for Statuses content"
-// @Success 200 {object} models.Statuses
-// @Failure 403 :id is not int
-// @router /:id [put]
-func (c *StatusesController) Put() {
-	idStr := c.Ctx.Input.Param(":id")
-	id, _ := strconv.Atoi(idStr)
-	v := models.Statuses{Id: id}
-	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if err := models.UpdateStatusesById(&v); err == nil {
-			c.Data["json"] = "OK"
-		} else {
-			c.Data["json"] = err.Error()
-		}
-	} else {
-		c.Data["json"] = err.Error()
-	}
-	c.ServeJSON()
-}
-
-// Delete ...
-// @Title Delete
-// @Description delete the Statuses
-// @Param	id		path 	string	true		"The id you want to delete"
-// @Success 200 {string} delete success!
-// @Failure 403 id is empty
-// @router /:id [delete]
-func (c *StatusesController) Delete() {
-	idStr := c.Ctx.Input.Param(":id")
-	id, _ := strconv.Atoi(idStr)
-	if err := models.DeleteStatuses(id); err == nil {
-		c.Data["json"] = "OK"
-	} else {
-		c.Data["json"] = err.Error()
 	}
 	c.ServeJSON()
 }
