# routers/router.go
@@ -17,7 +17,7 @@ func init() {
 	beego.Router("/", &controllers.MainController{})
 	beego.Router("/search", &controllers.SearchController{})
 	beego.Router("/upload", &controllers.UploadController{})
-	beego.Router("/comics", &controllers.ComicController{})
+	beego.Router("/comics", &controllers.ComicsController{})
 	beego.Router("/comics/add", &controllers.Series_addController{})
 	beego.Router("/groups", &controllers.Series_addController{})
 	beego.Router("/groups/add", &controllers.Series_addController{})
@@ -60,12 +60,6 @@ func init() {
 		beego.NSNamespace("/languages",
 			beego.NSInclude(
 				&controllers.LanguagesController{},
-			),
-		),
-
-		beego.NSNamespace("/users",
-			beego.NSInclude(
-				&controllers.UsersController{},
 			),
 		),
 
