# swagger/swagger.json
@@ -963,302 +963,20 @@
                         "description": ""
                     }
                 }
-            },
-            "post": {
-                "tags": [
-                    "statuses"
-                ],
-                "description": "create Statuses",
-                "operationId": "StatusesController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for Statuses content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Statuses"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.Statuses"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/statuses/{id}": {
-            "get": {
-                "tags": [
-                    "statuses"
-                ],
-                "description": "get Statuses by id",
-                "operationId": "StatusesController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Statuses"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is empty"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "statuses"
-                ],
-                "description": "update the Statuses",
-                "operationId": "StatusesController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for Statuses content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Statuses"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Statuses"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is not int"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "statuses"
-                ],
-                "description": "delete the Statuses",
-                "operationId": "StatusesController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "id is empty"
-                    }
-                }
-            }
-        },
-        "/users/": {
-            "get": {
-                "tags": [
-                    "users"
-                ],
-                "description": "get Users",
-                "operationId": "UsersController.Get All",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "fields",
-                        "description": "Fields returned. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "Sorted-by fields. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "Limit the size of result set. Must be an integer",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "Start position of result set. Must be an integer",
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Users"
-                        }
-                    },
-                    "403": {
-                        "description": ""
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "users"
-                ],
-                "description": "create Users",
-                "operationId": "UsersController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for Users content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Users"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.Users"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
-            "get": {
-                "tags": [
-                    "users"
-                ],
-                "description": "get Users by id",
-                "operationId": "UsersController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Users"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is empty"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "users"
-                ],
-                "description": "update the Users",
-                "operationId": "UsersController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for Users content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Users"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Users"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is not int"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "users"
-                ],
-                "description": "delete the Users",
-                "operationId": "UsersController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "id is empty"
-                    }
-                }
             }
         }
     },
     "definitions": {
-        ".Comic": {
+        ".Comics": {
             "type": "object"
         },
         ".Group_add": {
+            "type": "object"
+        },
+        ".Groups": {
+            "type": "object"
+        },
+        ".Groups_add": {
             "type": "object"
         },
         ".Login": {
@@ -1341,28 +1059,6 @@
                 },
                 "UserId": {
                     "$ref": "#/definitions/models.Users"
-                }
-            }
-        },
-        "models.Groups": {
-            "title": "Groups",
-            "type": "object",
-            "properties": {
-                "Delay": {
-                    "type": "string"
-                },
-                "Description": {
-                    "type": "string"
-                },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Links": {
-                    "type": "string"
-                },
-                "Name": {
-                    "type": "string"
                 }
             }
         },
@@ -1505,9 +1201,8 @@
             "title": "Statuses",
             "type": "object",
             "properties": {
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
+                "Name": {
+                    "type": "string"
                 }
             }
         },
@@ -1571,10 +1266,6 @@
         {
             "name": "languages",
             "description": "LanguagesController operations for Languages\n"
-        },
-        {
-            "name": "users",
-            "description": "UsersController operations for Users\n"
         },
         {
             "name": "groups_scanlation",
